find_package(OpenMP)
if(NOT OpenMP_CXX_FOUND)
  message(WARNING "OpenMP not found. Disabling tests.")
  return()
endif()

option(LCI_BUILD_TESTS "Build tests by default" ON)
if(NOT LCI_BUILD_TESTS)
  set(EXCLUDE_FROM_ALL ON)
endif()

include_directories(./)
# add_subdirectory(gtests)
add_subdirectory(loopback)
add_subdirectory(pingpong)
add_subdirectory(lcit)
